# Side-Step

./: .coderabbit.yaml  .gitignore  LICENSE  README.md  install_linux.sh  install_windows.bat  install_windows.ps1  pyproject.toml  requirements.txt  sidestep.bat  sidestep.sh  sidestep_tui.py  train.py
assets/: COLOR_LANGUAGE.md  TensorBoard.html  TensorBoardWithTSTP_dist.html  example_sidecar.txt  side-step.desktop
assets/presets/: high_quality.json  quick_test.json  recommended.json  vram_12gb.json  vram_16gb.json  vram_24gb_plus.json  vram_8gb.json
assets/themes/: amber_terminal.json  default.json  neon_rose.json  phosphor_green.json
frontend/: index.html  theme-editor.html
frontend/css/: components.css  crt.css  layout.css  palette.css  theme-editor.css  tokens.css  validation.css
frontend/electron/: main.js  package.json  preload.js
frontend/js/: api-cli.js  api.js  app-state.js  chart-interaction.js  crt.js  custom-select.js  dataset.js  defaults.js  defaults.json  fallback.js  history.js  palette.js  reactivity-ext.js  reactivity.js  theme-editor.js  theme.js  training-chart.js  training.js  tutorial.js  ui-prefs.js  utils.js  validation.js  vram.js  workspace-behaviors.js  workspace-charts.js  workspace-config.js  workspace-datasets.js  workspace-lab.js  workspace-setup.js  workspace.js
scripts/: convert_lora_standalone.py  convert_peft_to_comfyui.py  steal_flash_attn.py
sidestep_documentation/: CLI Argument Reference.md  Dataset Preparation.md  End-to-End Tutorial.md  Getting Started.md  Loss Weighting and CFG Dropout.md  Model Management.md  ObsidianREADME.md  Preprocessing++.md  Preset Management.md  RepositoryREADME.md  Shift and Timestep Sampling.md  The Settings Wizard.md  Training Guide.md  Using Your Adapter.md  VRAM Optimization Guide.md  Windows Notes.md
sidestep_engine/: _compat.py  make_test_fixtures.py  settings.py  training_defaults.py
sidestep_engine/analysis/: __init__.py  audio_analysis.py
sidestep_engine/analysis/fisher/: __init__.py  analysis.py  engine.py  io.py  modules.py  preview.py  ranks.py  spectral.py
sidestep_engine/cli/: args.py  common.py  config_builder.py  train_fixed.py  validation.py
sidestep_engine/core/: __init__.py  adaptive_timestep.py  comfyui_export.py  config_factory.py  configs.py  constants.py  dataset_scanner.py  dataset_validator.py  ema.py  formula_scheduler.py  lora_module.py  optim.py  progress_writer.py  run_discovery.py  selective_checkpointing.py  timestep_sampling.py  trainer.py  trainer_helpers.py  trainer_loop.py  types.py  validation.py  vram_estimation.py
sidestep_engine/data/: __init__.py  audio_convert.py  audio_duration.py  audio_metadata.py  audio_normalize.py  caption_config.py  caption_provider_gemini.py  caption_provider_local.py  caption_provider_openai.py  chunk_sampler.py  convert_sidecars.py  dataset_builder.py  enrich_song.py  http_utils.py  lyrics_provider_genius.py  lyrics_provider_music_flamingo.py  lyrics_provider_server.py  lyrics_sanitizer.py  metadata_provider_music_flamingo.py  preprocess.py  preprocess_discovery.py  preprocess_prompt.py  sidecar_io.py  sidecar_metadata.py  structured_helpers.py
sidestep_engine/gui/: __init__.py  file_ops.py  gpu_monitor.py  security.py  server.py  task_manager.py
sidestep_engine/logging/: __init__.py  tensorboard_utils.py
sidestep_engine/models/: __init__.py  discovery.py  gpu_utils.py  loader.py
sidestep_engine/tui/: __init__.py  app.py  state.py
sidestep_engine/tui/screens/: __init__.py  dashboard.py  dataset_browser.py  estimate.py  preprocess_monitor.py  run_history.py  training_config.py  training_monitor.py
sidestep_engine/tui/widgets/: __init__.py  gpu_gauge.py
sidestep_engine/ui/: __init__.py  banner.py  config_panel.py  dependency_check.py  errors.py  gpu_monitor.py  help_formatter.py  presets.py  progress.py  prompt_helpers.py  summary.py  tensorboard_launcher.py  wizard.py  wizard_menus.py
sidestep_engine/ui/flows/: __init__.py  build_dataset.py  build_dataset_ai.py  build_dataset_ai_batch.py  common.py  fisher.py  inline_preprocess.py  inline_preprocess_prompts.py  preprocess.py  resume.py  review_summary.py  setup.py  setup_api_keys.py  train.py  train_steps.py  train_steps_adapter.py  train_steps_adapter_dora.py  train_steps_adapter_loha.py  train_steps_adapter_lokr.py  train_steps_adapter_lora.py  train_steps_adapter_oft.py  train_steps_advanced.py  train_steps_helpers.py  train_steps_levers.py  train_steps_logging.py  (+3 more)
